# cmake-interface-lib

./: CMakeLists.txt
interface-lib/: CMakeLists.txt
lib-c/: CMakeLists.txt  main.c
lib-cxx/: CMakeLists.txt  main.c
